--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,6 @@
 VITE_AUTH_API_URL=http://18.220.232.235:8000
 VITE_FILE_API_URL=http://98.83.145.159:8000
+VITE_JUVENTUS=http://98.83.145.159:6000/metrics
+VITE_HASHIR=http://3.145.10.254:6000/metrics
+VITE_MILAN=http://54.205.123.214:6000/metrics
+VITE_RAYAN=http://18.220.232.235:6000/metrics
