--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
+    "build": "^0.1.4",
     "chart.js": "^4.4.8",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
